# nutsnbolts

./: .gitignore  .ycm_extra_conf.py  CMakeLists.txt  LICENSE  LICENSE_randutils  README.md  Tupfile  Tuprules.tup  build.bat  genDepGraph.bat  logbook.txt  nnb_todo.txt
headers/: nnb.hpp
headers/nnb/: graphics.hpp  log.hpp  resources.hpp  states.hpp  utils.hpp
headers/nnb/graphics/: Color.hpp  CursorManager.hpp  Image.hpp  PersistentText.hpp  PersistentTexture.hpp  RenderStack.hpp  Text.hpp  TextureContainer.hpp  Tupfile
headers/nnb/log/: log.hpp
headers/nnb/resources/: CustomDeleters.hpp  FontManager.hpp  Settings.hpp  SoundManager.hpp  TextureGroup.hpp  TextureManager.hpp
headers/nnb/states/: ExitState.hpp  GameState.hpp  GameStateMachine.hpp  GameStateMachine_old.hpp  NullState.hpp  SimpleGameState.hpp  State.hpp  StateFactory.hpp  StateMachine.hpp
headers/nnb/utils/: Context.hpp  Directions.hpp  Directory.hpp  FloatRect.hpp  GameFrame.hpp  ImageLoaders.hpp  NewlineOnDestruct.hpp  NullStream.hpp  Random.hpp  Rect.hpp  SDL_Helpers.hpp  StringHelpers.hpp  constants.hpp  macros.hpp  unique_ptr.hpp
include/: catch.hpp  randutils.hpp
recycle/: FloatRect.cpp  GameFrame.cpp  IntRect.cpp  IntRect.hpp  ResourceManager.cpp  ResourceManager.hpp  StaticTest.cpp  log.hpp  scratch.cpp
recycle/states_old_headers/: NullState.hpp  SimpleGameState.hpp  State.hpp  StateFactory.hpp
recycle/states_old_source/: GameState.cpp  SimpleGameState.cpp
sources/: CMakeLists.txt
sources/graphics/: CMakeLists.txt  Color.cpp  CursorManager.cpp  Image.cpp  PersistentText.cpp  PersistentTexture.cpp  RenderStack.cpp  Text.cpp  TextureContainer.cpp
sources/resources/: CMakeLists.txt  CustomDeleters.cpp  FontManager.cpp  Settings.cpp  SoundManager.cpp  TextureGroup.cpp  TextureManager.cpp  TextureManager_empty.cpp
sources/states/: CMakeLists.txt  GameState.cpp  GameStateMachine.cpp  GameStateMachine_old.cpp  SimpleGameState.cpp  State.cpp  StateFactory.cpp  StateMachine.cpp
sources/tests/: CMakeLists.txt  FolderTests.cpp  ImageTests.cpp  RectTests.cpp  StringTests.cpp  Tupfile  testmain.cpp  tests.cpp
sources/utils/: CMakeLists.txt  Context.cpp  Directory.cpp  ImageLoaders.cpp  NullStream.cpp  Random.cpp  SDL_Helpers.cpp  StringHelpers.cpp  Subsystems.cpp  constants.cpp
tools/: HeaderTupfile  SourceTupfile  salvage.py
